fix: possible layout shift cause

--- a/sass/Footer.module.sass
+++ b/sass/Footer.module.sass
@@ -8,7 +8,7 @@ footer.box
         height: 100%
         width: calc(100% - 100px * 2)
         margin: 0 auto
-        transition-duration: .2s
+        transition: background-color .15s linear
         @media screen and (max-width: 1430px)
             width: calc(100% - 70px * 2)
         @media screen and (max-width: 1100px)
