--- a/sass/Navigation.module.sass
+++ b/sass/Navigation.module.sass
@@ -21,7 +21,7 @@ nav.box
         height: 100%
         width: calc(100% - 100px * 2)
         margin: 0 auto
-        transition-duration: .2s
+        transition: background-color .15s linear
         @media screen and (max-width: 1430px)
             width: calc(100% - 70px * 2)
         @media screen and (max-width: 1100px)
@@ -118,7 +118,7 @@ nav.box
                     text-decoration: none
                     color: var(--font-st)
                     opacity: .8
-                    transition-duration: .2s
+                    transition: background-color .15s linear
                     cursor: pointer
                     padding: 5px 10px
                     border-radius: 50px
@@ -172,7 +172,7 @@ nav.box
                 font-size: 15px
                 color: var(--font-st)
                 text-decoration: none
-                transition-duration: .1s
+                transition: background-color .1s linear
                 width: calc( 100% - 12px * 2 )
                 border-radius: 50px
                 gap: 7px
@@ -188,7 +188,7 @@ nav.box
             font-weight: 400
             text-decoration: none
             color: var(--font-st)
-            transition-duration: .2s
+            transition: background-color .15s linear
             cursor: pointer
             padding: 5px 10px
             opacity: .8
@@ -202,7 +202,7 @@ nav.box
                 padding: 5px 10px
                 border-radius: 50px
                 background: var(--tertiary)
-                transition-duration: .1s
+                transition: background-color .1s linear
                 font-weight: 500
                 opacity: 1
                 color: var(--font-nd)
