--- a/sass/account/admin/page.module.sass
+++ b/sass/account/admin/page.module.sass
@@ -10,7 +10,7 @@ ul.users
         margin: 15px 0
         display: flex
         justify-content: space-between
-        transition-duration: .2s
+        transition: background-color .15s linear
         &:hover
             background: var(--tertiary)
         @media screen and (max-width: 400px)
@@ -53,7 +53,7 @@ ul.users
                 outline: 0
                 border: 0
                 cursor: pointer
-                transition-duration: .2s
+                transition: background-color .15s linear
                 text-decoration: none
                 @media screen and (max-width: 950px)
                     font-size: 14px
