--- a/sass/account/layout.module.sass
+++ b/sass/account/layout.module.sass
@@ -11,7 +11,7 @@ section.box
         width: 100%
         margin-top: 30px
         margin-right: 50px
-        transition-duration: .2s
+        transition: background-color .15s linear
         display: flex
         flex-direction: column
         gap: 15px
@@ -57,7 +57,7 @@ section.box
                     align-items: center
                     padding: 14px 12px
                     font-weight: 500
-                    transition-duration: .1s
+                    transition: background-color .1s linear
                     gap: 5px
                     @media screen and (max-width: 950px)
                         gap: 2px
