--- a/sass/account/page.module.sass
+++ b/sass/account/page.module.sass
@@ -32,7 +32,7 @@ ul.overview
                 display: flex
                 flex-direction: column
                 position: relative
-                transition-duration: .2s
+                transition: background-color .15s linear
                 z-index: 1
                 @media screen and (max-width: 1660px)
                     min-height: calc( 250px - 25px * 2 )
@@ -153,7 +153,7 @@ ul.connections
         display: flex
         flex-direction: column
         position: relative
-        transition-duration: .2s
+        transition: background-color .15s linear
         z-index: 1
         & header
             display: flex
