--- a/sass/account/security/page.module.sass
+++ b/sass/account/security/page.module.sass
@@ -87,7 +87,7 @@ div.hds
             border-radius: 20px
             background: var(--secondary-nd)
             cursor: pointer
-            transition-duration: .2s
+            transition: background-color .15s linear
             @media screen and (max-width: 1350px)
                 max-width: 100%
                 width: calc( 100% - 18px * 2 )
@@ -129,7 +129,7 @@ div.deactivate
         outline: 0
         border: 0
         cursor: pointer
-        transition-duration: .2s
+        transition: background-color .15s linear
         margin-top: 10px
         @media screen and (max-width: 950px)
             font-size: 14px
