--- a/sass/foss.module.sass
+++ b/sass/foss.module.sass
@@ -40,7 +40,7 @@ section.hero
                 min-height: 100px
                 height: 100%
                 width: 100%
-                transition-duration: .2s
+                transition: background-color .15s linear
                 flex: max-content
                 &:hover
                     background: var(--secondary)
