--- a/sass/page.module.sass
+++ b/sass/page.module.sass
@@ -43,7 +43,7 @@ section.hero
                 padding: 10px 15px
                 border-radius: 50px
                 background: var(--secondary)
-                transition-duration: .2s
+                transition: background-color .15s linear
                 cursor: pointer
                 color: var(--font-rd)
                 text-decoration: none
@@ -213,7 +213,7 @@ section.ready
         padding: 10px 15px
         border-radius: 50px
         background: var(--secondary)
-        transition-duration: .2s
+        transition: background-color .15s linear
         cursor: pointer
         color: var(--font-st)
         text-decoration: none
